# synapse

./: .gitmodules  CMakeLists.txt
bench/: CMakeLists.txt  bench_adiff.cpp  bench_mat.cpp  bench_matrix.cpp  bench_variable_mat.cpp
synapse/: CMakeLists.txt
synapse/synapse/: adiff.hpp  adtensor.hpp  benchmark.hpp  expression.hpp  function.hpp  lambda.hpp  logging.hpp  matrix.hpp  net.hpp  network.hpp  network2.hpp  tensor.hpp  tensor_old.hpp  utility.hpp  vector.hpp  xassert.hpp
tests/: CMakeLists.txt  expr_templates.cpp  test_adiff.cpp  test_expression.cpp  test_function.cpp  test_matrix.cpp  test_net.cpp  test_network.cpp  test_printable.cpp  test_tensor.cpp  test_thrust.cpp  test_xassert.cpp
