cmake_minimum_required(VERSION 3.5)
project(pinch)
# c++ standard
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
find_path(thrust_INCLUDE_DIRS NAMES thrust/version.h HINTS /usr/local/cuda/include)
message("thrust_include: ${thrust_INCLUDE_DIRS}")
set(CMAKE_CXX_FLAGS "-fopenmp -DTHRUST_DEVICE_SYSTEM=THRUST_DEVICE_SYSTEM_OMP -lgomp")
add_subdirectory(synapse)
add_subdirectory(tests)
#add_subdirectory(bench)